themes/next/source/css/_custom.styl
// 如果启用 hexo-config 中的 darkmode 配置项
if (hexo-config('darkmode')) {
  @font-face {
   font-family: 'Material Icons';
   font-style: normal;
   font-weight: 400;
   src: url(https://fonts.gstatic.com/s/materialicons/v143/flUhRq6tzZclQEJ-Vdg-IuiaDsNc.woff2) format('woff2');
  }

  .table-container {
    scrollbar-width: thin; /* 可选：thin, auto, none */
  }

  .post-body {
     p {
        text-align: "start";
     }  
   }

  
  // 在支持深色模式的设备上应用以下样式
  @media (prefers-color-scheme: dark) {
    /* 适用于 Firefox 和部分现代浏览器 */
    html {
      scrollbar-color: #888 #333; /* 滑块颜色 轨道颜色 */
    }


    // 文章主体内链接样式
    .post-body {    
      a:not(.btn) {
        --link-color: #3a86dd;
        --link-hover-color: #76a9dc;
        border-bottom: none;
      }

      .highlight-container {
        box-shadow: 0 0px 10px 0 rgba(0,0,0,0.5);
      }

      blockquote {
        border-left-color: rgba(red($orange), green($orange), blue($orange), 0.6); 
      }

      ol ul {
        margin-block-end: 20px;
        margin-block-start: 20px;
      }
    }

    .menu .menu-item .badge {
      background-color: #575a5b;
      color: #a3a3a3;
      padding: 3px 5px;
    }

    .pagination {
      border-top: 1px solid #363636;
      padding-top: 10px;

      .page-number {
        border-top: none;

        &.current {
          background: radial-gradient(circle at 50% 50%, #111, transparent 80%);
        }
      }

      .extend {
          border-top: none;
        }
    } 

    .search-popup {
      background: #232323;

      .search-icon, .popup-btn-close {
        color: #282828;
      }

      .search-header {
        background: #9d9d9d;
      }

      .search-input-container {
        display: flex;
      }

      p.search-result {
        border-bottom: none;
      }

      #no-result {
        color: #525252;
      }
    }

    .tag-cloud a:hover {
      color: $orange !important;
    }

    .posts-collapse .post-header {
      border-bottom: none;
    }

    .posts-collapse::before {
      background-color: #808183;
      margin-left: -1px;
      width: 2px;
    }

    .content.tag .post-title-link:hover {
      color: var(--link-hover-color);
    }

    // 图片样式
    .post-body img {
      border-radius: .5rem;
      box-shadow: 0 0px 10px 0 rgba(0,0,0,0.5);
    }

    .post-body div.img-no-shadow img {
      box-shadow: none;
      border-radius: .5rem;
    }

    .copy-btn {
      color: var(--text-color);
    }

    .post-eof {
      background: linear-gradient(to right, #474747 30%, transparent 30%, transparent) left / 10px 100% repeat-x;
      width: 100%;
    }

    .site-brand-container {
      // background: #333333
    }
    // Utterances 评论区间距
    .utterances {
      margin-top: 16px;
    }

    // 侧边栏链接去除下划线
    .sidebar a {
      border-bottom: none;
    }

    // 文章版权信息样式
    .post-copyright {
      border-radius: 0.5em;
      background-color: #302e2e;
      border-left-color: #9f3232;
    }

    // 文章导航样式
    .post-nav {
      border-color: gray;
    }

    // 主要按钮样式（btn-primary）
    .btn-primary {
      background: #fe2b2a69;
      border-color: #e65a5a;
      color: #e2e2e2;
    }

    // 键盘按键样式
    kbd {
      font-size: 0.5em;
      opacity: 0.8;
      background-color: #333;
      background-image: none;
      border-radius: .6em;
      box-shadow: .1em .1em .2em rgba(0, 0, 0, .1);
      font-family: inherit;
      padding: 0em .5em;
      border: 1px solid #666;
      white-space: nowrap;
      color: inherit;
    }

    // 按键被按下时的样式
    kbd:active {
      position: relative;
      top: 1px;
      box-shadow: none;
    }
    :root {
      --custom-color-info: #789fd6;
      --custom-background-info: #1f2123;
      --custom-color-error: #f15c5c;
      --custom-background-error: #3d0c07;
      --custom-color-success: rgb(73 140 76);
      --custom-background-success: rgb(26 44 43);
      --custom-color-warn: #ee5553;
      --custom-background-warn:#421f02; 
    }
    .post-body .image-caption, .post-body .figure .caption {
      margin: -5px auto 25px;
    }
  }
  @media (prefers-color-scheme: light) {
    :root {
    --custom-color-info:#303f9f;
    --custom-background-info: #e8f0fe;
    --custom-color-error: #a50e0e;
    --custom-background-error: #fce8e6;
    --custom-color-success: #0e8a0e;
    --custom-background-success: #e6fce6;
    --custom-color-warn: #b31412;
    --custom-background-warn: #feefe3; 
    }
    .highlight-container {
        box-shadow: 0 0px 10px 0 rgba(0,0,0,0.5);
      }
  }
  notice_before() {
    float: left;
    font: normal normal normal 24px/24px Material Icons;
    -webkit-font-feature-settings: "liga";
    -moz-font-feature-settings: "liga";
    font-feature-settings: "liga";
    -moz-osx-font-smoothing: grayscale;
    -webkit-font-smoothing: antialiased;
    text-rendering: optimizeLegibility;
    text-transform: none;
    word-wrap: normal;
    margin-block: 0;
    margin-inline: -36px 0;
  }
  notice() {
    border-radius: 0.5em;
    padding: 1em 1em;
    padding-left: 4em;
    font-size: 0.9em;
  }

  .notice-info {
    color: var( --custom-color-info);
    background-color: var(--custom-background-info);
    notice()
  }
  .notice-info::before {
    content: "star";
    notice_before()
  }
  
  .notice-error {
    color: var(--custom-color-error);
    background-color: var(--custom-background-error);
    notice()
  }
  .notice-error::before {
    content: "info";
    notice_before()
  }
  .notice-success {
    background-color: var(--custom-background-success);
    color: var(--custom-color-success);
    notice()
  }
  .notice-success::before {
    content: "lightbulb_outline";
    notice_before()
  }
  .notice-warn {
    background-color: var(--custom-background-warn);
    color: var(--custom-color-warn);
    notice()
  }
  .notice-warn::before {
    content: "warning";
    notice_before()
  }
}

